# mandown

./: cookiecutter.json  environment.yml
.github/workflows/: unittests.yml
tests/: test_creation.py
{{ cookiecutter.repo_name }}/: Makefile  environment.yml  pyproject.toml
{{ cookiecutter.repo_name }}/docker/: Dockerfile
{{ cookiecutter.repo_name }}/paper/: draft.md
{{ cookiecutter.repo_name }}/paper/.pandoc/: fancy_article.template  proposal.template  simple_article.template
{{ cookiecutter.repo_name }}/{{ cookiecutter.python_module_name }}/: __init__.py  manitex.py
